--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -22,10 +22,33 @@
   </head>
   <body>
     <div id="maincontent" class="container">
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-light bg-light navbar-expand-lg">
           <div class="container-fluid">
-              <button class="btn btn-danger" id="logout">Log Out</button>
-              <h4 id="loginname">[Name] logged in</h4>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <button class="btn btn-danger" id="logout">Log Out</button>
+                </li>
+                <li class="nav-item">
+                  <h4 id="loginname">[Name] logged in</h4>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('storage') }}">Storage</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('folders') }}">Folders</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('jobs') }}">Jobs</a>
+                </li>
+              </ul>
+              </div>
           </div>
         </nav>
         {% block content %}{% endblock %}
