--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -1,18 +1,20 @@
 {% extends "base.html" %}
-{% block title %}Example Web System{% endblock %}
+{% block title %}Capstone Cluster{% endblock %}
 {% block content %}
-<div class="container-fluid text-center">
-  <img src="{{ url_for('static', filename='images/bioinformatics_logo.svg') }}" width="25%">
+<div class="container-fluid" class="text-center">
+
+  <h2>Cluster Status</h2>
+  
+  <ul id="queue_hardware">
+
+    <li><strong>Normal Queue:</strong> 128 Cores</li>
+    <li><strong>Interactive Queue:</strong> 32 Cores</li>
+  </ul>
+
+
+
+
 </div>
-<div class="container-fluid text-center">
-  <div class="row">
-    <div class="col-md-3"><button class="btn btn-primary" id="pressme">Press me</button></div>
-    <div class="col-md-3"></div>
-    <div class="col-md-6">
-      <div><h4 class="d-inline">Name:</h4> <span id="user_details_name"></span></div>
-      <div><h4 class="d-inline">Username:</h4> <span id="user_details_username"></span></div>
-      <div><h4 class="d-inline">Email:</h4> <span id="user_details_email"></span></div>
-    </div>
-  </div>
-</div>
+
+
 {% endblock %}
