--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -18,7 +18,7 @@
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
     {% block css %} {% endblock %}
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}Capstone Cluster{% endblock %}</title>
   </head>
   <body>
     <div id="maincontent" class="container">
