--- a/www/templates/storage.html
+++ b/www/templates/storage.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-{% block title %}Example Web System{% endblock %}
+{% extends "index.html" %}
 {% block content %}
 
 <div class="container-fluid">
