--- a/www/templates/storage.html
+++ b/www/templates/storage.html
@@ -5,7 +5,61 @@
 
   <h2>Storage Usage</h2>
   
+  <div class="row">
+
+    <div style="width: 50%;">
+      <canvas id="storagechart"></canvas>
+    </div>
+
+  </div>
+
 
 </div>
+
+{% endblock %}
+
+{% block js %}
+
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+<script>
+const data = {
+  labels : {{ shares|safe }},
+  datasets : [
+    {
+      label: "",
+      data:{{ sizes|safe }},
+      borderColor: "#000000",
+      backgroundColor: "#CC0000"
+    }
+  ]
+};
+
+new Chart("storagechart", {
+  type: "bar",
+  data: data,
+  options: {
+    plugins: {
+      legend: {
+        display: false
+      }
+    },
+    indexAxis: 'y',
+    scales : {
+      x: {
+        title: {
+          display: true,
+          text: "Size (GB)"
+        },
+        ticks: {
+          beginAtZero: true
+        }
+      }
+    }
+  }
+});
+</script>
 
 {% endblock %}
