Added total storage values

--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -39,13 +39,13 @@
                   <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('storage') }}">Storage</a>
+                  <a class="nav-link" href="{{ url_for('storage') }}">MyStorage</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('folders') }}">Folders</a>
+                  <a class="nav-link" href="{{ url_for('folders') }}">MyFolders</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('jobs') }}">Jobs</a>
+                  <a class="nav-link" href="{{ url_for('jobs') }}">MyJobs</a>
                 </li>
               </ul>
               </div>
