--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -3,6 +3,10 @@
 <div class="container-fluid" class="text-center">
   
   <div class="row">
+    <h1 class="text-center">Cluster Status</h1>
+  </div>
+
+  <div class="row">
   
     <div class="col-md-4">
       <canvas id="storagechart", style="width:100%"></canvas>
