Added option to stop charts being blurry

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -51,6 +51,7 @@ new Chart("storagechart", {
   type: "doughnut",
   data: storagedata,
   options: {
+    devicePixelRatio: 4,
     responsive: false,
     plugins: {
       legend: {
@@ -85,6 +86,7 @@ new Chart("cpuchart", {
   type: "doughnut",
   data: cpudata,
   options: {
+    devicePixelRatio: 4,
     responsive: false,
     plugins: {
       legend: {
@@ -118,6 +120,7 @@ new Chart("memchart", {
   type: "doughnut",
   data: memdata,
   options: {
+    devicePixelRatio: 4,
     responsive: false,
     plugins: {
       legend: {
