Fixed fuzzy storage chart

--- a/www/templates/storage.html
+++ b/www/templates/storage.html
@@ -52,6 +52,7 @@ new Chart("storagechart", {
   type: "bar",
   data: data,
   options: {
+    devicePixelRatio: 4,
     plugins: {
       legend: {
         display: false
