Added per user all job reporting

--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -52,6 +52,10 @@
                   <li class="nav-item">
                     <a class="admin-nav-link nav-link" href="{{ url_for('allstorage') }}">AllStorage</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="admin-nav-link nav-link" href="{{ url_for('alljobs') }}">AllJobs</a>
+                  </li>
+
                   {% endif %}
                 </ul>
               </div>
