Switched login to capstone logo

--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -77,7 +77,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h2 class="modal-title">Log In</h2>
-            <img class="float-end" src="{{ url_for('static', filename='images/bioinformatics_logo.svg') }}" width="100px">
+            <img class="float-end" src="{{ url_for('static', filename='images/capstone_logo.svg') }}" width="200px">
           </div>
           <div class="modal-body">
               <label for="username">Username</label>
