--- a/www/templates/storage.html
+++ b/www/templates/storage.html
@@ -30,10 +30,6 @@
   </div>
 
   <div class="row">
-    <h4>This is how your storage usage has changed over the last month.</h4>
-  </div>
-
-  <div class="row">
     <div style="width: 50%;" class="pt-5">
       <canvas id="storagetimechart"></canvas>
     </div>
@@ -111,6 +107,13 @@ new Chart("storagetimechart", {
     plugins: {
       legend: {
         display: false
+      },
+      title: {
+        display: true,
+        text: "Usage over the last month",
+        font: {
+          size: 20
+        }
       }
     },
     scales : {
@@ -121,7 +124,7 @@ new Chart("storagetimechart", {
         },
         beginAtZero: true
       }
-    }
+    },
   }
 });
 
