--- a/www/templates/storage.html
+++ b/www/templates/storage.html
@@ -23,15 +23,16 @@
 
   <div class="row">
 
-    <div style="width: 50%;" class="pt-5">
-      <canvas id="storagechart"></canvas>
+    <div class="col-md-6">
+      <div style="width: 100%;" class="pt-5">
+        <canvas id="storagechart"></canvas>
+      </div>
     </div>
 
-  </div>
-
-  <div class="row">
-    <div style="width: 50%;" class="pt-5">
-      <canvas id="storagetimechart"></canvas>
+    <div class="col-md-6">
+      <div style="width: 100%;" class="pt-5">
+        <canvas id="storagetimechart"></canvas>
+      </div>
     </div>
   </div>
 
