Add auto refresh to index page. Fixes #4

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+
+{% block css %}
+{# Not strictly CSS but it's in the head so it works #}
+<meta http-equiv="refresh" content="30">
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid" class="text-center">
   
