--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -40,13 +40,13 @@
                     <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('storage') }}">MyStorage</a>
+                    <a class="nav-link" href="{{ url_for('storage') }}">Storage</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('folders') }}">MyFolders</a>
+                    <a class="nav-link" href="{{ url_for('folders') }}">Folders</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('jobs') }}">MyJobs</a>
+                    <a class="nav-link" href="{{ url_for('jobs') }}">Jobs</a>
                   </li>
                   {% if isadmin %}
                   <li class="nav-item">
