Allow monitoring of individuals overall storage

--- a/www/templates/storage.html
+++ b/www/templates/storage.html
@@ -3,6 +3,26 @@
 
 <div class="container-fluid">
 
+  {% if isadmin %}
+  <div class="row pt-2 pb-2">  
+  <div class="col-md-4">
+  <select class="form-select" id="usertoview">
+  
+  {% for username in username_list %}
+  {% if username == shown_username %}
+  <option selected>{{ username }}</option>
+  {% else %}
+  <option>{{ username }}</option>
+  {% endif %}
+  {% endfor %}
+
+  </select>
+  </div>
+  </div>
+  {% endif %}
+
+
+
   <div class="row">
     <h2 class="pb-5">Storage Usage for {{ person }}</h2>
   </div>
@@ -10,7 +30,6 @@
   <div class="row">
     <p>This is an overall summary of your storage usage.  You can see a breakdown by folder in the <a href="{{ url_for('folders') }}">folders</a> page.</p>
   </div>
-
 
   <div class="row">
     <h4>Your current total storage usage is <strong>{{ totals["total_size"] }}GB</strong></h4>
@@ -43,6 +62,9 @@
 {% endblock %}
 
 {% block js %}
+
+
+<script src="{{ url_for('static', filename='js/storage.js') }}"></script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
