Dynamically sized the allstorage user graph height

--- a/www/templates/allstorage.html
+++ b/www/templates/allstorage.html
@@ -36,9 +36,8 @@
 
 
   <div class="row">
-
     <div style="width: 100%;" class="pt-5">
-      <canvas id="storagechart" style="width: 100%; height: 20em;"></canvas>
+      <canvas id="storagechart" style="width: 100%; height: {{ graph_height }}em;"></canvas>
     </div>
 
   </div>
