Changed jobs titles

--- a/www/templates/jobs.html
+++ b/www/templates/jobs.html
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="col-md-6">  
-      <h2>Jobs</h2>
+      <h2>Jobs over last month</h2>
   
       <p>This is your activity in the last month.</p>
       <table class="table">
