--- a/www/templates/folders.html
+++ b/www/templates/folders.html
@@ -3,15 +3,11 @@
 
 <div class="container-fluid">
 
-  <h2>Storage Folders for {{ person }}</h2>
-
-  <div class="row">
-    <p>This is a list of all folders which contain more than 100MB of data. Removing unneeded data helps us to reduce both the cost and energy usage of our storage systems and keeps the cluster working optimally for everyone.  Please have a look and see if there's anything on this list which you can delete. Contact the bioinformatics group if you'd like help managing your data.</p>
-  </div>
+  <h2>Largest Folders</h2>
 
   {% if isadmin %}
   <div class="row">  
-  <div class="col-md-4">
+  <div class="col-md-4 pb-3">
   <select class="form-select" id="usertoview">
   
   {% for username in username_list %}
@@ -26,6 +22,10 @@
   </div>
   </div>
   {% endif %}
+
+  <div class="row">
+    <p>This is a list of all folders which contain more than 100MB of data. Removing unneeded data helps us to reduce both the cost and energy usage of our storage systems and keeps the cluster working optimally for everyone.  Please have a look and see if there's anything on this list which you can delete. Contact the bioinformatics group if you'd like help managing your data.</p>
+  </div>
 
 
   <div class="row">
