--- a/www/templates/jobs.html
+++ b/www/templates/jobs.html
@@ -7,6 +7,21 @@
   <div class="row">
     <div class="col-md-6">  
       <h2>Jobs over last month</h2>
+
+        {% if isadmin %}
+        <select class="form-select" id="usertoview">
+        
+        {% for username in username_list %}
+        {% if username == shown_username %}
+        <option selected>{{ username }}</option>
+        {% else %}
+        <option>{{ username }}</option>
+        {% endif %}
+        {% endfor %}
+
+        </select>
+        {% endif %}
+
   
       <p>This is your activity in the last month.</p>
       <table class="table">
@@ -54,6 +69,8 @@
 {% endblock %}
 
 {% block js %}
+
+<script src="{{ url_for('static', filename='js/jobs.js') }}"></script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
